# dependency-resolution

./: .gitignore  README.md  package-lock.json  pyproject.toml
dependency_resolution/: __init__.py  auto_wired_cache.py  mocks.py  provider_cache.py
tests/: test_auto_wired_cache.py  test_provider_cache.py
