[tool.poetry]
name = "dependency-resolution"
version = "0.1.0"
description = "A simple dependency resolution library using container concepts"
authors = [ "Saroopashree K <saroopa25@gmail.com>" ]
license = "MIT"
keywords = [ "dependency", "resolution", "injection" ]
packages = [
    { include = "dependency_resolution" },
]

[tool.poetry.dependencies]
python = "~=3.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
